--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,1 +1,10 @@
-/* Styles go here */
+.checkclass input[type = "checkbox"]:not(:checked) {
+  pointer-events:none;
+  /*display: none;
+  background:green;*/
+
+}
+
+.uncheckclass input[type = "checkbox"] {
+    pointer-events: initial;
+}
